monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/scrape: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberrypi
      containers:
        - name: prometheus
          image: index.docker.io/mmoriarity/prometheus:latest
          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --web.console.libraries=/usr/share/prometheus/console_libraries
            - --web.console.templates=/usr/share/prometheus/consoles
            - --web.external-url=https://prometheus.homelab/
            - --web.enable-admin-api
          resources:
            requests:
              cpu: "200m"
              memory: "750M"
            limits:
              memory: "1250M"
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: prometheus-data-host
              mountPath: /prometheus
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
      volumes:
        - name: prometheus-data-host
          hostPath:
            path: /srv/nfs/kubernetes/monitoring/prometheus-data
