monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: http
