monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus
spec:
  rules:
    - host: prometheus
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 80
